# Semestra

./: .gitignore  INDEX.md  PLUGIN_DEVELOPMENT.md  README.md  README.zh-CN.md  Semestra.code-workspace  agent.md  back.sh  coursesCalendar.ics  implementation_plan.md  main.py  package-lock.json  package.json  pyproject.toml  reproduce_issue.py  semestra.db  task.md  todo.md
backend/: .env.example  INDEX.md  alembic.ini  api_auth.py  api_common.py  api_course_schedule.py  api_layout.py  auth.py  backup_transfer.py  color_utils.py  course_resources.py  crud.py  database.py  gradebook.py  lms_canvas.py  lms_crypto.py  lms_providers.py  lms_service.py  logic.py  main.py  migrate_add_category.py  migrate_add_program_id_to_course.py  migrate_sqlite_to_postgres.py  migrate_user_settings.py  migrate_week_pattern_to_alternating.py  migration_v1_add_nickname.py  migration_v2_add_google_sub.py  models.py  requirements.txt  schedule_support.py  schemas.py  semestra.db  test_backup_import_export.py  test_course_resources.py  test_crud.py  test_gradebook.py  test_lms_integrations.py  test_logic.py  test_nickname.py  test_todo.py  (+4 more)
backend/alembic/: INDEX.md  env.py  script.py.mako
docs/: INDEX.md  alembic.md  auth-security-explained.md  calendar_architecture.md  plugin-development.md  settings-ui-design.md  timetable_refactoring_plan_optimized.md  todolist.md
frontend/: .env  INDEX.md  README.md  components.json  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
frontend/public/: INDEX.md
frontend/src/: App.tsx  (+5 more)
(+467 files in other folders)
